<resources>

    <string name="app_name">Java Quiz</string>
    <!--<string name="app_id_demo">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--demoo-->
    <string name="banner_demo">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter_demo">ca-app-pub-3940256099942544/1033173712</string>



    <string name="admobe_ad_id">ca-app-pub-5013638152042731~2113665863</string>
    <!--<string name="admobe_ad_id">@string/app_id_demo</string>-->


    <!--done-->
    <string name="mainactivity_banner">ca-app-pub-5013638152042731/9609012507</string>
<!--    <string name="mainactivity_banner">@string/banner_demo</string>-->


<!--    done-->
    <string name="answerSheet">ca-app-pub-5013638152042731/3002147916</string>
<!--    <string name="answerSheet">@string/banner_demo</string>-->

<!--done-->
    <string name="quizactivity_banner">ca-app-pub-5013638152042731/6261552604</string>
<!--    <string name="quizactivity_banner">@string/banner_demo</string>-->


    <string name="inter_finish">ca-app-pub-5013638152042731/2085745701</string>
    <!--<string name="inter_finish">@string/inter_demo</string>-->

    <string name="inter_1">ca-app-pub-5013638152042731/4841493873</string>
  <!--  <string name="inter_1">@string/inter_demo</string>-->

    <string name="inter_2">ca-app-pub-5013638152042731/7248165362</string>
  <!--  <string name="inter_2">@string/inter_demo</string>-->



    <string name="question"> Which of the following river is known as Dakshina Ganga?</string>
    <string name="ans1"> A. Krishna</string>

    <string name="ans2"> B. Mahanadi</string>

    <string name="ans3">C. Godavari</string>

    <string name="ans4">D. Cauvery</string>
</resources>
