<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true"
    android:id="@+id/cardview"
    card_view:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/myfont"
                style="@style/AppTheme"
                android:padding="4dp"
                android:id="@+id/question"
                android:text="@string/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/answercheck"
                    android:src="@drawable/correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></ImageView>
                <TextView

                    style="@style/AppTheme"
                    android:fontFamily="@font/myfont"
                    android:textSize="16dp"
                    android:padding="4dp"
                    android:text="@string/ans1"
                    android:id="@+id/yourans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </LinearLayout>
            <TextView
                style="@style/AppTheme"
                android:textSize="16dp"
                android:layout_marginLeft="18dp"
                android:padding="4dp"
                android:text="@string/ans2"
                android:id="@+id/correctans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/description"
                android:id="@+id/description"
                style="@style/AppTheme"
                android:textSize="16dp"
                android:padding="8dp"
                android:text="@string/ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </android.support.v7.widget.CardView>


